# houio

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  architecture.md  implementation-plan.md  onboard.md  todo.md
.github/workflows/: ci.yml
cmake/: houio-config.cmake.in
docs/: houdini-22-windows.md  houdini-package.md  houdini-windows.md
houdini/package/: houio.json.in
houdini/package/houio/: README.md
houdini/package/houio/scripts/python/: houio_tools.py
houdini/package/houio/toolbar/: HouIO.shelf
houdini/scripts/python/: houio_houdini_tools.py
houdini/toolbar/: houio.shelf
include/houio/: Attribute.h  Diagnostic.h  Field.h  Geometry.h  GeometryIO.h  HalfFloat.h  HouGeo.h  HouGeoAdapter.h  HouGeoIO.h  json.h  types.h
include/houio/math/: BoundingBox2.h  BoundingBox3.h  Color.h  Math.h  Matrix22.h  Matrix22Algo.h  Matrix33.h  Matrix33Algo.h  Matrix44.h  Matrix44Algo.h  RNG.h  Ray3.h  Vec2.h  Vec2Algo.h  Vec3.h  Vec3Algo.h  Vec4.h  Vec4Algo.h
include/houio/math/Half/: eLut.h  retired.h
include/ttl/: equivalent_types.hpp  retired.hpp
include/ttl/meta/: typelist.hpp
python/houio_hom/: __init__.py  __main__.py  bridge.py
src/: Attribute.cpp  Field.cpp  Geometry.cpp  GeometryIO.cpp  HouGeo.cpp  HouGeoAdapter.cpp  HouGeoIO.cpp  Scf.cpp  Scf.h  json.cpp
src/math/: Color.cpp  Math.cpp
src/math/Half/: half.cpp
tests/: CMakeLists.txt  check_retired_sources.cmake  example_readwrite.cpp  inspect_attributes.cpp  inspect_json.cpp  main.cpp  parser_corpus.cpp  roundtrip_geometry.cpp  run_houdini_bootstrap_test.cmake  run_houdini_package_test.cmake  run_package_consumer.cmake  test_attribute.cpp  test_attribute_pages.cpp  test_binary_json.cpp  test_conversion_safety.cpp  test_export_safety.cpp  test_geometry_container.cpp  test_geometry_io.cpp  test_groups.cpp  test_malformed_geometry.cpp  test_math.cpp  test_modern_geometry.cpp  test_numeric_storage.cpp  test_polygon_runs.cpp  test_volumes.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: houio_convert.cpp
tools/houdini/: bootstrap_houdini_package.ps1  build_houdini_package.py  build_manual_test_bundle.py  compare_geometry.py  generate_box.py  generate_crag.py  generate_fixture_suite.py  inspect_crag.py  install_hom_bridge.ps1  install_houdini_package.ps1  probe_file_formats.py  probe_vdb_hom.py  run_crag_roundtrip.ps1  run_fixture_roundtrips.ps1  run_houdini_package_gui_test.py  test_hom_bridge.py  test_houdini_package.py  test_package_tools.py  validate_fixture_suite.py  validate_geometry.py
